# credit-sim-api

./: .dockerignore  .env.mock  Makefile  README.md  docker-compose.yml  main.py  pyproject.toml
app/api/mappers/: credit.py
app/api/routes/: credit.py  health.py
app/api/schemas/: request.py  response.py
app/application/ports/: risk_audit.py
app/application/use_case/credit/: simulate.py
app/config/: cors.py  settings.py
app/domain/entities/: credit.py
app/domain/models/: credit.py
app/domain/repository/credit/: base.py  simulation.py
app/domain/service/credit/: amortization.py
app/infrastructure/clients/: audit.py
app/infrastructure/database/: engine.py  session.py
deploy/db/: init.sql
deploy/dev/: Dockerfile
