[project]
name = "credit-sim-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]>=0.128.1",
    "uvicorn[standard]>=0.29",
    "sqlalchemy",
    "psycopg2-binary",
    "pydantic-settings",
]

[dependency-groups]
dev = [
    "ruff>=0.14.6",
]
